fix card shadow on mobile, remove extraneous comments

--- a/Full-Stack-Boot-Camp/Projects/styled-landing-page-project/landing-page.css
+++ b/Full-Stack-Boot-Camp/Projects/styled-landing-page-project/landing-page.css
@@ -27,16 +27,12 @@ header {
     background-color: white;
     filter: drop-shadow(0em .1em .5em rgba(0, 0, 0, 0.205));
     display: flex;
-    /* justify-content: space-around; */
     justify-content: space-between;
     position: sticky;
-    /* top: 8px; */
     top: 0;
-    /* width: 100vw; */
-    /* margin: 8px auto; */
     box-sizing: border-box;
     padding: 0 5em;
-    z-index: 2;
+    z-index: 3;
 }
 
 .logo {color: rgb(75, 113, 236);}
@@ -55,19 +51,16 @@ header {
     background-color: white;
     display: flex;
     justify-content: space-between;
-    /* justify-content: center; */
     align-items: center;
     box-sizing: border-box;
     width: 60em;
     border-radius: 3em;
     padding: 3em;
     margin: 1em auto 5em;
-    /* margin-top: 1em; */
     filter: drop-shadow(0em 0em .5em rgba(0, 0, 0, 0.205));
 }
 
 #hero-container {
-    /* font-size: 1.5vw; */
     box-sizing: border-box;
     width: 21em;
 }
@@ -79,7 +72,6 @@ header {
 #more {
     display: flex;
     justify-content: space-between;
-    /* padding: 0; */
 }
 
 .btn {
@@ -106,7 +98,6 @@ header {
 }
 
 #img1 {
-    /* width: 30em; */
     height: 15em;
     border-radius: 4%;
 }
@@ -131,11 +122,6 @@ header {
     margin: 0 auto;
 }
 
-.emoji {
-    font-size: 2em;
-    padding-bottom: 0.5em;
-}
-
 .card {
     background-color: white;
     filter: drop-shadow(0em 0em 0.5em rgba(0, 0, 0, 0.205));
@@ -143,12 +129,17 @@ header {
     flex-direction: column;
     align-items: center;
     width: 15em;
-    /* box-sizing: border-box; */
     padding: 3em 1em;
     border-radius: 10%;
     text-align: center;
     transition-property: transform, filter;
     transition-duration: 0.5s;
+    z-index: 2;
+}
+
+.emoji {
+    font-size: 2em;
+    padding-bottom: 0.5em;
 }
 
 #about {
